--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
+[Ll]ogs/
+[Pp]ackages/
+*.meta
+*.keystore
+.gradle/
+*.DS_Store
 Assets/AssetStoreTools*
 
 # Visual Studio cache directory
